<?xml version="1.0" encoding="utf-8"?>

<!--
Whack-A-Pede
David Clark
Development Portfolio 6
MDV469-O, C202005-01
-->

<resources>
    <string name="app_name">Whack-A-Pede</string>

    <string name="whack_a_pede_logo">Whack-A-Pede Logo</string>

    <string name="landing">@string/app_name</string>
    <string name="game">@string/app_name</string>
    <string name="game_over">Game Over</string>
    <string name="play_game">Play Game</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="settings">Settings</string>
    <string name="instructions">Instructions</string>
    <string name="credits">Credits</string>

    <string name="back">Back</string>

    <string name="contributors">Whack-A-Pede game design and graphics by David Clark.\n\nMusic by Eric Matyas at www.soundimage.org.\n\nSound effects courtesy of ZapSplat at www.zapsplat.com.\n\nFor my niece and nephew, Mara and Alex.\n\nCopyright © 2020 David Clark.</string>

    <string name="volume">Volume</string>

    <string name="music_volume">Music Volume</string>
    <string name="music_volume_summary">Adjust the volume of the background music.</string>

    <string name="effects_volume">Effects Volume</string>
    <string name="effects_volume_summary">Adjust the volume of in-game sound effects.</string>

    <string name="music">Music</string>

    <string name="music_track">Music Track</string>
    <string name="music_track_summary">&#8220;%s&#8221; is the selected music track that will play in the background.</string>

    <string name="guest">Guest</string>

    <string name="player">Guest:</string>
    <string name="time_remaining">Time:</string>
    <string name="zero">0</string>
    <string name="player_avatar">Player Avatar</string>

    <string name="play">Play</string>
    <string name="pause">Pause</string>

    <string name="game_over_player">Game Over%s!</string>

    <plurals name="game_over_message">
        <item quantity="one">You scored %d point.</item>
        <item quantity="other">You scored %,d points.</item>
    </plurals>

    <plurals name="points">
        <item quantity="one">%d Point</item>
        <item quantity="other">%,d Points</item>
    </plurals>

    <plurals name="rounds">
        <item quantity="one">%d Round</item>
        <item quantity="other">%,d Rounds</item>
    </plurals>

    <string name="in_time">\ in %s</string>

    <string name="game_over_publishing">Wait a moment while your score syncs to the leaderboard.</string>
    <string name="game_over_published">All set!  It\'s safe to hit back now.</string>
    <string name="game_over_unpublished">Your score couln\'t be published to the leaderboard.  The server might be down, or your Internet connection might be offline.</string>

    <string name="retrieving">Retrieving the Top 100 Leaders…</string>
    <string name="no_leaders">Couldn\'t retrieve any leaders.  The server might be down or your Internet connection might be offline.  Or, maybe, there are no leaders yet.  Why not play a game and get on the leaderboard?</string>

    <string-array name="music_tracks">
        <item>Mind Bender</item>
        <item>Electric Raindrops</item>
        <item>Pong-A-Long</item>
    </string-array>

    <string name="music_volume_key">music_volume_key</string>
    <string name="effects_volume_key">effects_volume_key</string>
    <string name="music_track_key">music_track_key</string>

    <string name="gameplay_label">Gameplay Basics</string>
    <string name="gameplay">Tap the play button to start a game.  When the game starts, you get 10 seconds on the clock to start and a centipede will start crawling all over the lawn, turning and burrowing in and out of holes.  Tap on centipede segments that are above ground to clear them from the lawn for points.  If you tap it in the middle, it will split into two centipedes, and if you tap it on the head, all its segments will scatter.  Every time you clear a segment, all the remaining ones speed up.  Clear all the segments from the lawn before the timer runs out, or it\'s game over.  If you clear them all before the timer runs out, a new centipede will crawl onto the lawn, faster than the one before it.</string>
    <string name="pausing_label">Pausing a Game</string>
    <string name="pausing">Tap the pause button to pause a running game.  The game will also pause if you leave the app while it\'s playing, if you tap back or up once, or if you go into the settings.</string>
    <string name="quitting_label">Quitting a Game</string>
    <string name="quitting">To quit a paused game, tap the back or up button once.  To quit a running game, first pause it, then hit back or up.</string>
    <string name="changing_label">Changing Settings</string>
    <string name="changing">To change the games settings, tap the settings button from the main menu or from the game menu.  Slide the thumb on the volume sliders to the desired volume levels for the background music and sound effects.  Tap to select the desired track for the background music.  Then, tap back or up to save the changes.</string>
    <string name="scoring_label">Scoring and Leaderboard</string>
    <string name="scoring">You score 100 points for every segment you clear from the lawn.  You also get an extra 10 seconds on the clock for every segment you clear.  Once you clear all segments from the lawn, any time left on the clock turns into points.  You get 10 points for every second left over.  To get on the leaderboard, you have to score among the 100 players.  Your score automatically syncs to the cloud when your game is over, and the leaderboard always keeps your highest score.</string>
</resources>
