<?xml version="1.0" encoding="utf-8"?>

<!--
Whack-A-Pede
David Clark
Development Portfolio 6
MDV469-O, C202005-01
-->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sunshineYellow"
    tools:context=".PlayGameFragment">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/whack_a_pede_logo"
        android:src="@drawable/logo_whack_a_pede"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_logo">

        <Button
            android:id="@+id/button_guest"
            style="@style/Whackapede.Button.Grass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guest" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/button_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/leaderboard" />

        <Button
            android:id="@+id/button_back"
            style="@style/Whackapede.Button.Grass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>