<?xml version="1.0" encoding="utf-8"?>

<!--
Whack-A-Pede
David Clark
Development Portfolio 6
MDV469-O, C202005-01
-->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    tools:context=".fragments.GameFragment" >

    <ImageView
        android:id="@+id/image_avatar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/player_avatar"
        android:paddingStart="32dp"
        android:paddingTop="32dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@id/text_time"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/text_player"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingTop="32dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        android:text="@string/player"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/text_score"
        app:layout_constraintStart_toEndOf="@+id/image_avatar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_score"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingTop="32dp"
        android:paddingEnd="32dp"
        android:paddingBottom="8dp"
        android:text="@string/zero"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_player"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        android:text="@string/time_remaining"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/text_clock"
        app:layout_constraintStart_toEndOf="@+id/image_avatar"
        app:layout_constraintTop_toBottomOf="@id/text_player" />

    <TextView
        android:id="@+id/text_clock"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:paddingEnd="32dp"
        android:paddingBottom="8dp"
        android:text="@string/zero"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_time"
        app:layout_constraintTop_toBottomOf="@id/text_score" />

    <!-- <edu.fullsail.whackapede.views.GameSurfaceView
        android:id="@+id/surface_game"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageAvatar"
        app:layout_constraintDimensionRatio="7:11"/> -->

    <FrameLayout
        android:id="@+id/frame_game"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_avatar"
        app:layout_constraintDimensionRatio="15:23" />
</androidx.constraintlayout.widget.ConstraintLayout>